--- a/bower.json
+++ b/bower.json
@@ -6,10 +6,15 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "angular": "~1.5.0",
-    "angular-route": "~1.5.0",
-    "angular-loader": "~1.5.0",
+    "angular": "~1.6.1",
+    "angular-route": "~1.6.1",
+    "angular-animate": "~1.6.1",
+    "angular-touch": "~1.6.1",  
+    "angular-loader": "~1.6.1",
+    "bootstrap": "3.3.7",  
     "angular-mocks": "~1.5.0",
-    "html5-boilerplate": "^5.3.0"
+    "html5-boilerplate": "^5.3.0",
+    "angular-bootstrap":"~2.5.0",
+    "ngInfiniteScroll":"~1.3.0"  
   }
 }
